# tp

.github/workflows/: run.yml
task1/: run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.h  scr.cpp
task2/C/: main.cpp  main_test.cpp  tests.cpp
task3/: CMakeLists.txt  main_lib.cpp
task4/src/01-simple-library/: Functions.cpp.save
task4/src/02-tree/: .Tree.cpp.swp  Tree.cpp
task4/src/03-weather/: .Weather.cpp.swp
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.cpp.save
task4/tests/02-tree/: TreeTestCase.cpp
task4/tests/03-weather/: WeatherMock.cpp  WeatherMock.cpp.save  WeatherMock.h  WeatherTestCase.cpp
task6/cmake-with-flask/: Dockerfile
